--- a/Educate_overseas_landing/css/main.css
+++ b/Educate_overseas_landing/css/main.css
@@ -183,3 +183,12 @@ footer {
     background: rgb(238, 108, 61);
     padding: 10px;
 }
+
+.icons-section>a>i {
+    font-size: 30px;
+    ;
+}
+
+.icons-section {
+    margin-top: 10px;
+}
