--- a/Educate_overseas_landing/css/main.css
+++ b/Educate_overseas_landing/css/main.css
@@ -46,7 +46,8 @@ li a,
 }
 
 li a:hover {
-    color: green;
+    color: white;
+    font-weight: bold;
 }
 
 .navbar-with-image {
@@ -56,7 +57,10 @@ li a:hover {
 nav {
     position: absolute;
     top: 10px;
-    ;
+}
+
+.nav-item:hover{
+    background: tomato;
 }
 
 .mission {
